--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build ESP32-C3 Firmware
+name: Build ESP32-C3 Drone Firmware
 
 on:
   push:
@@ -10,54 +10,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      # ---------- Install Arduino CLI ----------
+      # ---------- Install Arduino CLI (Fixed Path) ----------
       - name: Install Arduino CLI
         run: |
           curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
-          echo "$HOME/bin" >> $GITHUB_PATH
-          arduino-cli version
+          # အခု install လုပ်လိုက်တဲ့ bin folder ကို path ထဲ တိုက်ရိုက်ထည့်ရန်
+          echo "${{ github.workspace }}/bin" >> $GITHUB_PATH
 
       # ---------- Configure CLI ----------
       - name: Configure Arduino CLI
         run: |
           arduino-cli config init
-          arduino-cli config set board_manager.additional_urls https://espressif.github.io/arduino-esp32/package_esp32_index.json
+          arduino-cli core update-index --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
 
-      # ---------- Install ESP32 Core (LOCKED) ----------
-      - name: Install ESP32 Core 2.0.17
+      # ---------- Install ESP32 Core ----------
+      - name: Install ESP32 Core
         run: |
-          arduino-cli core update-index
-          arduino-cli core install esp32:esp32@2.0.17
+          arduino-cli core install esp32:esp32@2.0.17 --additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
 
       # ---------- Install Libraries ----------
       - name: Install Libraries
         run: |
-          arduino-cli lib update-index
           arduino-cli lib install "ESP Async WebServer"
           arduino-cli lib install "AsyncTCP"
           arduino-cli lib install "Adafruit MPU6050"
           arduino-cli lib install "Adafruit Unified Sensor"
           arduino-cli lib install "Adafruit BusIO"
 
-      # ---------- Prepare Sketch ----------
-      - name: Prepare Sketch
-        run: |
-          mkdir -p sketch/drone
-          cp drone.ino sketch/drone/drone.ino
-
-      # ---------- Compile ----------
+      # ---------- Compile (Merged BIN ထွက်အောင်) ----------
       - name: Compile ESP32-C3
         run: |
+          # drone.ino ရှိတဲ့ နေရာအတိအကျကို ရွေးပေးပါ (ဥပမာ- root မှာဆိုရင် ".")
           arduino-cli compile \
             --fqbn esp32:esp32:esp32c3 \
             --output-dir build \
-            sketch/drone
+            --export-binaries \
+            .
 
-      # ---------- Upload BIN ----------
+      # ---------- Upload BIN (ESPFlash အတွက်) ----------
       - name: Upload Firmware
         uses: actions/upload-artifact@v4
         with:
-          name: firmware
+          name: esp32c3-drone-firmware
           path: build/*.bin
+          
